# agents

1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_extra.ipynb  README.md  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  test.ipynb
3_crew/debate_per/: README.md  pyproject.toml
3_crew/debate_per/output/: decide.md
3_crew/debate_per/src/debate_per/: crew.py  main.py
3_crew/debate_per/src/debate_per/config/: agents.yaml  tasks.yaml
