[project]
name = "debate_per"
version = "0.1.0"
description = "debate_per using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
debate_per = "debate_per.main:run"
run_crew = "debate_per.main:run"
train = "debate_per.main:train"
replay = "debate_per.main:replay"
test = "debate_per.main:test"
run_with_trigger = "debate_per.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
